--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,9 @@
 runtime: nodejs10
 instance_class: F4
+automatic_scaling:
+  target_cpu_utilization: 0.85
+  min_instances: 1
+  max_instances: 1
 handlers:
 - url: /.*
   script: auto
